{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 8,
  "lineage": "42310847-0d5a-bea1-f3c3-8f062d1194cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b3aef6bc281a13b2",
            "arn": "arn:aws:ec2:us-east-1:471112548618:instance/i-0dd22db2e3afda61c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd22db2e3afda61c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e0a694f97750f4f3",
            "private_dns": "ip-10-0-0-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.163",
            "public_dns": "ec2-34-201-45-207.compute-1.amazonaws.com",
            "public_ip": "34.201.45.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00519091f4307d0f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f163ef78e7437a5",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb66f29d7e92111e"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112548618:internet-gateway/igw-08041ce727884b664",
            "id": "igw-08041ce727884b664",
            "owner_id": "471112548618",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "vpc_id": "vpc-015d539e87f0dbc2a"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112548618:route-table/rtb-08ac4b1ad62afcc03",
            "id": "rtb-08ac4b1ad62afcc03",
            "owner_id": "471112548618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08041ce727884b664",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "timeouts": null,
            "vpc_id": "vpc-015d539e87f0dbc2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c22d0eb3850dda24",
            "route_table_id": "rtb-08ac4b1ad62afcc03",
            "subnet_id": "subnet-02f163ef78e7437a5"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet1",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112548618:security-group/sg-0bb66f29d7e92111e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb66f29d7e92111e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "471112548618",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "timeouts": null,
            "vpc_id": "vpc-015d539e87f0dbc2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112548618:subnet/subnet-02f163ef78e7437a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f163ef78e7437a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112548618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "vpc_id": "vpc-015d539e87f0dbc2a"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112548618:vpc/vpc-015d539e87f0dbc2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026005cab6d69330d",
            "default_route_table_id": "rtb-0b6336994bbd1478e",
            "default_security_group_id": "sg-006649681e2586904",
            "dhcp_options_id": "dopt-06bee1fe12b0e8b1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015d539e87f0dbc2a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6336994bbd1478e",
            "owner_id": "471112548618",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "CloudAdept ©",
              "project": "CloudAdept ©-pluralsight_course"
            }
          }
        }
      ]
    }
  ]
}